Fixed the issue with pixi.js preventing a clear compile, exposing the right file fixed it

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <meta charset="utf-8">
     </head>
     <body>
+      <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.1.0/pixi.js"></script> -->
         <script type="text/javascript" src="./build/bundle.js" charset="utf-8"></script>
     </body>
 </html>
